# d0020e-project

./: .env  .gitignore  Cargo.toml  Cranky.toml  LICENSE  README.md  books.db  clippy.toml  diesel.toml  rustfmt.toml  taplo.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
demo/: Cargo.toml
demo/src/: main.rs
demo2/: Cargo.toml
demo2/src/: main.rs
frontend/: index.html  script.js  style.css
frontend/api-broker/: Cargo.toml
frontend/api-broker/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
migrations/2026-02-04-102944-0000_create_books/: down.sql  up.sql
mock/bookery/: Cargo.toml
mock/bookery/src/: main.rs
mock/graphQL-stuff/: Cargo.toml  graphql_mock.db  schema.gql
mock/graphQL-stuff/src/: book_schema.rs  db.rs  main.rs  queries.rs
mock/graphql-api/: Cargo.toml  graphql_mock.db
mock/graphql-api/src/: book_schema.rs  db.rs  main.rs  queries.rs
mock/rest-api-axum/: Cargo.toml
mock/rest-api-axum/src/: api_testing.rs  app_builder.rs  handlers.rs  lib.rs  main.rs
mock/rest-api-axum/src/tests/: api_intgrTests.rs
mock/sql_api/: .env  Cargo.toml  diesel.toml
mock/sql_api/migrations/2026-02-04-102944-0000_create_books/: down.sql  up.sql
mock/sql_api/src/: api_testing.rs  builder.rs  db.rs  main.rs  models.rs  schema.rs
query_macro/: Cargo.toml
query_macro/src/: lib.rs
schema_types/: Cargo.toml
schema_types/src/: example.rs  lib.rs  model.rs
src/: connector.rs  encode.rs  errors.rs  graphql.rs  lib.rs  postgres.rs  query.rs  rest.rs  source_sink.rs
src/encode/: json.rs  pg_book.rs  xml.rs
src/graphql/: builder.rs
src/postgres/: builder.rs  models.rs
src/query/: combinators.rs  translate.rs
src/query/translate/: http.rs
src/rest/: builder.rs
tests/: compile.rs
