[package]
name = "broker"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
resolver = "3"
# members = ["mock/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "\"Product Data Broker\" for the D0020E \"Project in computer science\" course at Luleå University of Technology"
readme = "README.md"
repository = "https://www.github.com/arvid-persson1/d0020e-project"
license = "MIT"
keywords = ["api", "database", "parsing", "serde", "utility"]
categories = ["api-bindings", "database"]

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
# WARN: May make backtraces less useful. Downgrade to "debuginfo" if needed.
strip = "symbols"
debug-assertions = false
overflow-checks = false
# PERF: Consider "fat" if performance gain is worth the extra build time.
lto = "thin"
# WARN: May make debugging more difficult, but proper logging should make this unnecessary.
panic = "abort"
incremental = false
codegen-units = 16
