[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "broker"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[workspace]
resolver = "3"
# members = ["mock/*"]

[workspace.package]
categories = ["api-bindings", "database"]
description = "\"Product Data Broker\" for the D0020E \"Project in computer science\" course at Luleå University of Technology"
edition = "2024"
keywords = ["api", "database", "parsing", "serde", "utility"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/arvid-persson1/d0020e-project"
version = "0.1.0"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
strip = "none"

[profile.release]
debug = false
opt-level = 3
# WARN: May make backtraces less useful. Downgrade to "debuginfo" if needed.
debug-assertions = false
overflow-checks = false
strip = "symbols"
# PERF: Consider "fat" if performance gain is worth the extra build time.
lto = "thin"
# WARN: May make debugging more difficult, but proper logging should make this unnecessary.
codegen-units = 16
incremental = false
panic = "abort"

[dependencies]
error_set = "0.9.0"
futures = "0.3.31"
reqwest = "0.12.24"

[workspace.lints.rust]
# Core language features and proper use of common APIs.
ambiguous_negative_literals = "allow"
closure_returning_async_block = "allow"
elided_lifetimes_in_paths = "allow"
if_let_rescope = "allow"
rust_2021_incompatible_closure_captures = "allow"
tail_expr_drop_order = "allow"
unsafe_code = "allow"
unstable_features = "allow"
# Many false positives.
missing_copy_implementations = "allow"
# Code style, refactor artifacts, simplification, performance, likely mistakes. Should not be allowed.
absolute_paths_not_starting_with_crate = "warn"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
# Documentation, debug remnants, tests, error messages. Should only be allowed during development.
missing_docs = "warn"
# Suspicious or dangerous patterns, possibly with legitimate use cases. May need to be allowed.
deref_into_dyn_supertrait = "warn"
ffi_unwind_calls = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
unnameable_types = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_results = "warn"
variant_size_differences = "warn"
# Platform/program-dependent.
linker_messages = "warn"
# Bad ideas.
non_ascii_idents = "deny"
# Unsafe patterns with safe(r) alternatives, unsafe code parading as safe.
deprecated_safe_2024 = "deny"
missing_unsafe_on_extern = "deny"
unsafe_attr_outside_unsafe = "deny"
# Forward compatibility for older Rust versions.
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
rust_2021_incompatible_or_patterns = "deny"
rust_2021_prefixes_incompatible_syntax = "deny"
rust_2021_prelude_collisions = "deny"
rust_2024_guarded_string_incompatible_syntax = "deny"
rust_2024_incompatible_pat = "deny"
rust_2024_prelude_collisions = "deny"

[workspace.lints.clippy]
# Opposites of checked lints, covered by other lints.
allow_attributes = "allow"
self_named_module_files = "allow"
semicolon_inside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
# Core language features and proper use of common APIs.
arithmetic_side_effects = "allow"
as_conversions = "allow"
as_underscore = "allow"
big_endian_bytes = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
copy_iterator = "allow"
create_dir = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
float_cmp = "allow"
float_cmp_const = "allow"
fn_to_numeric_cast_any = "allow"
host_endian_bytes = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
inline_always = "allow"
inline_asm_x86_att_syntax = "allow"
inline_asm_x86_intel_syntax = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
let_underscore_untyped = "allow"
linkedlist = "allow"
little_endian_bytes = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_trait_methods = "allow"
modulo_arithmetic = "allow"
needless_for_each = "allow"
non_ascii_literal = "allow"
panic = "allow"
panic_in_result_fn = "allow"
partial_pub_fields = "allow"
pattern_type_mismatch = "allow"
pointer_format = "allow"
precedence = "allow"
precedence_bits = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_without_shorthand = "allow"
question_mark_used = "allow"
ref_binding_to_reference = "allow"
ref_patterns = "allow"
rest_pat_in_fully_bound_structs = "allow"
similar_names = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
string_add = "allow"
string_add_assign = "allow"
todo = "allow"
unchecked_time_subtraction = "allow"
unimplemented = "allow"
unreachable = "allow"
unwrap_in_result = "allow"
unwrap_used = "allow"
# While this is bad, it's common in real code and promoting it to a warning would bloat diagnosis.
multiple_crate_versions = "allow"
# Poorly implemented.
cognitive_complexity = "allow"
# Many false positives.
decimal_literal_representation = "allow"
# Very noisy.
missing_inline_in_public_items = "allow"
# Code style, refactor artifacts, simplification, performance, likely mistakes. Should not be allowed.
absolute_paths = "warn"
alloc_instead_of_core = "warn"
arbitrary_source_item_ordering = "warn"
assertions_on_result_states = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
comparison_chain = "warn"
default_trait_access = "warn"
deref_by_slicing = "warn"
elidable_lifetime_names = "warn"
empty_enum_variants_with_brackets = "warn"
empty_enums = "warn"
empty_structs_with_brackets = "warn"
equatable_if_let = "warn"
error_impl_error = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
large_digit_groups = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
match_bool = "warn"
match_same_arms = "warn"
mismatching_type_param_order = "warn"
missing_asserts_for_indexing = "warn"
mod_module_files = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
negative_feature_names = "warn"
no_effect_underscore_binding = "warn"
non_std_lazy_statics = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_if_let_else = "warn"
pub_underscore_fields = "warn"
pub_with_shorthand = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
redundant_pub_crate = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
self_only_used_in_recursion = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_outside_block = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
single_option_map = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
struct_field_names = "warn"
suboptimal_flops = "warn"
trait_duplication_in_bounds = "warn"
try_err = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_semicolon = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_result_ok = "warn"
unused_rounding = "warn"
unused_self = "warn"
unused_trait_names = "warn"
use_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
useless_let_if_seq = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
# Documentation, debug remnants, tests, error messages. Should only be allowed during development.
allow_attributes_without_reason = "warn"
cargo_common_metadata = "warn"
dbg_macro = "warn"
doc_broken_link = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_include_without_cfg = "warn"
doc_link_code = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
ignore_without_reason = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_panics_doc = "warn"
multiple_unsafe_ops_per_block = "warn"
should_panic_without_expect = "warn"
tests_outside_test_module = "warn"
too_long_first_doc_paragraph = "warn"
undocumented_unsafe_blocks = "warn"
use_debug = "warn"
# Suspicious or dangerous patterns, possibly with legitimate use cases. May need to be allowed.
clone_on_ref_ptr = "warn"
coerce_container_to_any = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
fn_params_excessive_bools = "warn"
format_collect = "warn"
format_push_string = "warn"
future_not_send = "warn"
get_unwrap = "warn"
large_include_file = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
option_option = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
read_zero_byte_vec = "warn"
renamed_function_params = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
same_name_method = "warn"
set_contains_or_insert = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
str_split_at_newline = "warn"
string_slice = "warn"
struct_excessive_bools = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
trailing_empty_array = "warn"
unicode_not_nfc = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_self_imports = "warn"
unsafe_derive_deserialize = "warn"
volatile_composites = "warn"
while_float = "warn"
# Suggestions. May need to be allowed frequently.
if_not_else = "warn"
into_iter_without_iter = "warn"
iter_without_into_iter = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_zero_suggestions = "warn"
stable_sort_primitive = "warn"
string_lit_as_bytes = "warn"
too_many_lines = "warn"
trivial_regex = "warn"
wildcard_enum_match_arm = "warn"
# Platform/target-dependent, arbitrary stack size limits.
large_futures = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
trivially_copy_pass_by_ref = "warn"
# Promoted from warnings: certain mistakes.
cast_enum_truncation = "deny"
cast_nan_to_int = "deny"
duplicated_attributes = "deny"
fn_to_numeric_cast = "deny"
forget_non_drop = "deny"
four_forward_slashes = "deny"
from_raw_with_void_ptr = "deny"
incompatible_msrv = "deny"
non_canonical_clone_impl = "deny"
non_canonical_partial_ord_impl = "deny"
pointers_in_nomem_asm_block = "deny"
# Bad ideas.
as_ptr_cast_mut = "deny"
cfg_not_test = "deny"
debug_assert_with_mut_call = "deny"
disallowed_script_idents = "deny"
empty_loop = "deny"
enum_glob_use = "deny"
exit = "deny"
implicit_hasher = "deny"
infinite_loop = "deny"
missing_spin_loop = "deny"
mut_mut = "deny"
non_send_fields_in_send_ty = "deny"
ref_option = "deny"
ref_option_ref = "deny"
wildcard_dependencies = "deny"
wildcard_imports = "deny"
# Unsafe patterns with safe(r) alternatives, unsafe code parading as safe.
as_pointer_underscore = "deny"
borrow_as_ptr = "deny"
cast_ptr_alignment = "deny"
cast_slice_from_raw_parts = "deny"
crosspointer_transmute = "deny"
manual_dangling_ptr = "deny"
no_mangle_with_rust_abi = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ref_as_ptr = "deny"
swap_ptr_to_ref = "deny"
transmute_ptr_to_ptr = "deny"
transmute_undefined_repr = "deny"
