[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "broker"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["mock/bookery"]
# members = ["mock/*"]

[workspace.package]
categories = ["api-bindings", "database"]
description = "\"Product Data Broker\" for the D0020E \"Project in computer science\" course at Luleå University of Technology"
edition = "2024"
keywords = ["api", "database", "parsing", "serde", "utility"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/arvid-persson1/d0020e-project"
version = "0.1.0"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
strip = "none"

[profile.release]
debug = false
opt-level = 3
# WARN: May make backtraces less useful. Downgrade to "debuginfo" if needed.
debug-assertions = false
overflow-checks = false
strip = "symbols"
# PERF: Consider "fat" if performance gain is worth the extra build time.
lto = "thin"
# WARN: May make debugging more difficult, but proper logging should make this unnecessary.
codegen-units = 16
incremental = false
panic = "abort"

[dependencies]
bytes = "1.11.0"
futures = "0.3.31"
reqwest = { features = ["stream"], version = "0.12.24" }
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { features = ["macros"], version = "1.48.0" }
transitive = "1.2.0"

[workspace.lints.rust]
# Core language features and proper use of common APIs.
ambiguous_negative_literals = "allow"
closure_returning_async_block = "allow"
elided_lifetimes_in_paths = "allow"
if_let_rescope = "allow"
rust_2021_incompatible_closure_captures = "allow"
tail_expr_drop_order = "allow"
unsafe_code = "allow"
unstable_features = "allow"
# Many false positives.
missing_copy_implementations = "allow"
# Code style, refactor artifacts, simplification, performance, likely mistakes.
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "deny"
macro_use_extern_crate = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
# Documentation, debug remnants, tests, error messages.
missing_docs = "deny"
# Suspicious or dangerous patterns, possibly with legitimate use cases.
deref_into_dyn_supertrait = "deny"
ffi_unwind_calls = "deny"
impl_trait_overcaptures = "deny"
impl_trait_redundant_captures = "deny"
let_underscore_drop = "deny"
meta_variable_misuse = "deny"
missing_debug_implementations = "deny"
unnameable_types = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_results = "deny"
variant_size_differences = "deny"
# Platform/program-dependent.
linker_messages = "deny"
# Bad ideas.
non_ascii_idents = "forbid"
# Unsafe patterns with safe(r) alternatives, unsafe code parading as safe.
deprecated_safe_2024 = "forbid"
missing_unsafe_on_extern = "forbid"
unsafe_attr_outside_unsafe = "forbid"
# Forward compatibility for older Rust versions.
keyword_idents_2018 = "forbid"
keyword_idents_2024 = "forbid"
rust_2021_incompatible_or_patterns = "forbid"
rust_2021_prefixes_incompatible_syntax = "forbid"
rust_2021_prelude_collisions = "forbid"
rust_2024_guarded_string_incompatible_syntax = "forbid"
rust_2024_incompatible_pat = "forbid"
rust_2024_prelude_collisions = "forbid"
# Forward compatibility regarding never type.
dependency_on_unit_never_type_fallback = "warn"
never_type_fallback_flowing_into_unsafe = "deny"

[workspace.lints.clippy]
# Opposites of checked lints, covered by other lints.
allow_attributes = "allow"
self_named_module_files = "allow"
semicolon_inside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
# Core language features and proper use of common APIs.
arithmetic_side_effects = "allow"
as_conversions = "allow"
as_underscore = "allow"
big_endian_bytes = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
copy_iterator = "allow"
create_dir = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
float_cmp = "allow"
float_cmp_const = "allow"
fn_to_numeric_cast_any = "allow"
host_endian_bytes = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
inline_always = "allow"
inline_asm_x86_att_syntax = "allow"
inline_asm_x86_intel_syntax = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
let_underscore_untyped = "allow"
linkedlist = "allow"
little_endian_bytes = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_trait_methods = "allow"
modulo_arithmetic = "allow"
needless_for_each = "allow"
non_ascii_literal = "allow"
panic = "allow"
panic_in_result_fn = "allow"
partial_pub_fields = "allow"
pattern_type_mismatch = "allow"
pointer_format = "allow"
precedence = "allow"
precedence_bits = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
ref_binding_to_reference = "allow"
ref_patterns = "allow"
rest_pat_in_fully_bound_structs = "allow"
similar_names = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
string_add = "allow"
string_add_assign = "allow"
unchecked_time_subtraction = "allow"
unwrap_in_result = "allow"
# While this is bad, it's common in real code and promoting it to a warning would bloat diagnosis.
multiple_crate_versions = "allow"
# Poorly implemented.
cognitive_complexity = "allow"
# Many false positives.
decimal_literal_representation = "allow"
# Fine to use, but should be allowed with a `reason`. Prefer `expect` over `unwrap`.
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "warn"
# Suggestions. May need to be allowed frequently.
if_not_else = "warn"
into_iter_without_iter = "warn"
iter_without_into_iter = "warn"
missing_const_for_fn = "warn"
missing_inline_in_public_items = "warn"
must_use_candidate = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_zero_suggestions = "warn"
too_many_lines = "warn"
trivial_regex = "warn"
wildcard_enum_match_arm = "warn"
# Platform/target-dependent, arbitrary stack size limits.
large_futures = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
trivially_copy_pass_by_ref = "warn"
# Code style, refactor artifacts, simplification, performance, likely mistakes.
absolute_paths = "deny"
alloc_instead_of_core = "deny"
arbitrary_source_item_ordering = "deny"
assertions_on_result_states = "deny"
assigning_clones = "deny"
bool_to_int_with_if = "deny"
branches_sharing_code = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
cloned_instead_of_copied = "deny"
collection_is_never_read = "deny"
comparison_chain = "deny"
default_trait_access = "deny"
deref_by_slicing = "deny"
elidable_lifetime_names = "deny"
empty_enum_variants_with_brackets = "deny"
empty_enums = "deny"
empty_structs_with_brackets = "deny"
equatable_if_let = "deny"
error_impl_error = "deny"
expl_impl_clone_on_copy = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
from_iter_instead_of_collect = "deny"
if_then_some_else_none = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
imprecise_flops = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
inefficient_to_string = "deny"
invalid_upcast_comparisons = "deny"
ip_constant = "deny"
items_after_statements = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
large_digit_groups = "deny"
macro_use_imports = "deny"
manual_assert = "deny"
manual_instant_elapsed = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_midpoint = "deny"
manual_string_new = "deny"
many_single_char_names = "deny"
map_unwrap_or = "deny"
map_with_unused_argument_over_ranges = "deny"
match_bool = "deny"
match_same_arms = "deny"
mismatching_type_param_order = "deny"
missing_asserts_for_indexing = "deny"
mod_module_files = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
naive_bytecount = "deny"
needless_bitwise_bool = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
negative_feature_names = "deny"
no_effect_underscore_binding = "deny"
non_std_lazy_statics = "deny"
nonstandard_macro_braces = "deny"
option_as_ref_cloned = "deny"
option_if_let_else = "deny"
pub_underscore_fields = "deny"
pub_without_shorthand = "deny"
rc_mutex = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
redundant_pub_crate = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
return_and_then = "deny"
self_only_used_in_recursion = "deny"
semicolon_if_nothing_returned = "deny"
semicolon_outside_block = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
single_char_pattern = "deny"
single_match_else = "deny"
single_option_map = "deny"
stable_sort_primitive = "deny"
str_to_string = "deny"
string_lit_as_bytes = "deny"
string_lit_chars_any = "deny"
struct_field_names = "deny"
suboptimal_flops = "deny"
trait_duplication_in_bounds = "deny"
try_err = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
uninhabited_references = "deny"
uninlined_format_args = "deny"
unnecessary_join = "deny"
unnecessary_literal_bound = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_semicolon = "deny"
unnecessary_struct_initialization = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
unseparated_literal_suffix = "deny"
unused_async = "deny"
unused_peekable = "deny"
unused_result_ok = "deny"
unused_rounding = "deny"
unused_self = "deny"
unused_trait_names = "deny"
use_self = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
useless_let_if_seq = "deny"
verbose_bit_mask = "deny"
verbose_file_reads = "deny"
zero_sized_map_values = "deny"
# Documentation, debug remnants, tests, error messages.
allow_attributes_without_reason = "deny"
cargo_common_metadata = "deny"
dbg_macro = "deny"
doc_broken_link = "deny"
doc_comment_double_space_linebreaks = "deny"
doc_include_without_cfg = "deny"
doc_link_code = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
ignore_without_reason = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
multiple_unsafe_ops_per_block = "deny"
should_panic_without_expect = "deny"
tests_outside_test_module = "deny"
too_long_first_doc_paragraph = "deny"
undocumented_unsafe_blocks = "deny"
use_debug = "deny"
# Suspicious or dangerous patterns, possibly with legitimate use cases.
clone_on_ref_ptr = "deny"
coerce_container_to_any = "deny"
default_union_representation = "deny"
derive_partial_eq_without_eq = "deny"
empty_drop = "deny"
fallible_impl_from = "deny"
filetype_is_file = "deny"
fn_params_excessive_bools = "deny"
format_collect = "deny"
format_push_string = "deny"
future_not_send = "deny"
get_unwrap = "deny"
large_include_file = "deny"
large_types_passed_by_value = "deny"
let_underscore_must_use = "deny"
literal_string_with_formatting_args = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
maybe_infinite_iter = "deny"
mem_forget = "deny"
mixed_read_write_in_expression = "deny"
option_option = "deny"
or_fun_call = "deny"
path_buf_push_overwrite = "deny"
pathbuf_init_then_push = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
read_zero_byte_vec = "deny"
renamed_function_params = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
same_name_method = "deny"
set_contains_or_insert = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
str_split_at_newline = "deny"
string_slice = "deny"
struct_excessive_bools = "deny"
suspicious_operation_groupings = "deny"
suspicious_xor_used_as_pow = "deny"
trailing_empty_array = "deny"
unicode_not_nfc = "deny"
unnecessary_box_returns = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_self_imports = "deny"
unsafe_derive_deserialize = "deny"
volatile_composites = "deny"
while_float = "deny"
# Promoted from warnings: certain mistakes.
cast_enum_truncation = "forbid"
cast_nan_to_int = "forbid"
duplicated_attributes = "forbid"
fn_to_numeric_cast = "forbid"
forget_non_drop = "forbid"
four_forward_slashes = "forbid"
from_raw_with_void_ptr = "forbid"
incompatible_msrv = "forbid"
non_canonical_clone_impl = "forbid"
non_canonical_partial_ord_impl = "forbid"
pointers_in_nomem_asm_block = "forbid"
# Bad ideas.
as_ptr_cast_mut = "forbid"
cfg_not_test = "forbid"
debug_assert_with_mut_call = "forbid"
disallowed_script_idents = "forbid"
empty_loop = "forbid"
enum_glob_use = "forbid"
exit = "forbid"
implicit_hasher = "forbid"
infinite_loop = "forbid"
missing_spin_loop = "forbid"
mut_mut = "forbid"
non_send_fields_in_send_ty = "forbid"
ref_option = "forbid"
ref_option_ref = "forbid"
wildcard_dependencies = "forbid"
wildcard_imports = "forbid"
# Unsafe patterns with safe(r) alternatives, unsafe code parading as safe.
as_pointer_underscore = "forbid"
borrow_as_ptr = "forbid"
cast_ptr_alignment = "forbid"
cast_slice_from_raw_parts = "forbid"
crosspointer_transmute = "forbid"
manual_dangling_ptr = "forbid"
no_mangle_with_rust_abi = "forbid"
ptr_as_ptr = "forbid"
ptr_cast_constness = "forbid"
ref_as_ptr = "forbid"
swap_ptr_to_ref = "forbid"
transmute_ptr_to_ptr = "forbid"
transmute_undefined_repr = "forbid"
