[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "demo"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
broker = { features = ["rest"], workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { features = ["stream","json"], version = "0.12.24" }
serde_json = "1.0.145"

[lints]
workspace = true
