[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "demo"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
broker = { features = ["rest", "postgres"], workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }

[lints]
workspace = true
