[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "query_macro"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
quote = { version = "1.0.42", default-features = false }
syn = { default-features = false, version = "2.0.111", features = ["derive", "parsing", "proc-macro"] }

[lints]
workspace = true

[lib]
proc-macro = true
